Fixed some styling issues related to responsive design and added logic to keep displaying keyboard on mobile when sending a message

--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,11 @@ button {
   font-size: 17px;
 }
 
+.full-screen-error-button {
+  font-size: 11px;
+  border-radius: 8px;
+}
+
 .full-screen-error-container button {
   min-width: 80px;
 }
@@ -233,6 +238,12 @@ button {
     margin-top: 2px;
     padding: 4px 9px;
     border-radius: 6px;
+  }
+
+  .full-screen-error-button {
+    font-size: 15px;
+    padding: 6px 12px;
+    border-radius: 10px;
   }
 
   .full-screen-error-container h2 {
